# shipbot-hebi

./: CMakeLists.txt  README.txt  arm_readme.txt
armcontrol/: CMakeCache.txt  Makefile  armcontrol  armcontrol.cpp  backup  cmake_install.cmake  hebi.txt
armcontrol/hebi/: Makefile  cmake_install.cmake
examples/: CMakeLists.txt  command_control_strategy_group_example.cpp  command_group_example.cpp  command_module_example.cpp  command_persist_settings_group_example.cpp  command_settings_group_example.cpp  command_sidewind_example.cpp  command_spring_constants_group_example.cpp  feedback_async_group_example.cpp  feedback_sync_group_example.cpp  feedback_sync_module_example.cpp  info_sync_group_example.cpp  io_feedback_example.cpp  joystick.cpp  led_example.cpp  log_group_example.cpp  lookup_entrylist_example.cpp  lookup_group_example.cpp  lookup_group_general_example.cpp  lookup_module_example.cpp  lookup_module_general_example.cpp  master_slave_async_group_example.cpp  master_slave_group_example.cpp  persist_example.cpp  pwm_example.cpp  segway_example.cpp  test_api.cpp
hebi/: CMakeLists.txt
hebi/include/: hebi.h  hebi_command.h  hebi_feedback.h  hebi_group.h  hebi_group_command.h  hebi_group_feedback.h  hebi_group_info.h  hebi_info.h  hebi_lookup.h  hebi_mac_address.h  hebi_module.h  hebi_trajectory.h
hebi/lib/: libhebi.so.0  libhebi.so.0.14
hebi/src/: command.cpp  command.hpp  feedback.cpp  feedback.hpp  group.cpp  group_command.cpp  group_feedback.cpp  info.cpp  lookup.cpp  lookup.hpp  lookup_entry.hpp  module.cpp
testex/: CMakeCache.txt  Makefile  cmake_install.cmake  lookuptest  lookuptest.cpp
testex/hebi/: Makefile
